--- a/pages/Devices/deviceDetail/deviceDetail.wxss
+++ b/pages/Devices/deviceDetail/deviceDetail.wxss
@@ -6,7 +6,7 @@ Page{
 .buttonview{
   position: fixed;
   bottom: 0;
-  background-color:rgba(58, 58, 61, 1.000);
+  background-color:#03B5AA;
   width: 100%;
   display: flex;
   flex-direction: row;
