--- a/pages/me/me.wxss
+++ b/pages/me/me.wxss
@@ -108,7 +108,7 @@ padding-bottom:9px;
 margin-left:0;
 padding-left:40rpx;
 padding-top:20rpx;
-font-size:30rpx;
+font-size:17px;
 }
 .userinfo-avatar {
   display: block;
