--- a/pages/Devices/addDevice/addDevice.wxml
+++ b/pages/Devices/addDevice/addDevice.wxml
@@ -1,15 +1,29 @@
 <!--miniprogram/pages/Devices/addDevice/addDevice.wxml-->
-<view class="regpage">
-  <mp-cells title="请输入设备ID及设备密码进行添加">
+
+
+<!-- 新的注册设备界面 -->
+<!-- 上方图表以及整体样式 -->
+<view class="box">
+  <view class="lineM"></view>
+  <view class="lineN"></view>
+  <view class="icon">
+    <image src="../../../img/chilun.png"></image>
+    <view class="text">添加设备</view>
+  </view>
+
+  <!-- 输入框 -->
+  <view class="regpage">
+  <mp-cells title="">
     <mp-cell show-error prop="idcard" title="设备序列号" ext-class="">
-      <input bindinput="formInputChange" data-field="id" class="weui-input input-buti" placeholder="请输入序列号" />
+      <input bindinput="formInputChange" data-field="id" class="weui-input input-buti" placeholder="请输入序列号" id="xlh" value="{{idValue}}" />
     </mp-cell>
     <mp-cell show-error prop="idcard" title="设备验证码" ext-class="">
-      <input bindinput="formInputChange" data-field="pw" class="weui-input input-buti" placeholder="请输入验证码" />
+      <input bindinput="formInputChange" data-field="pw" class="weui-input input-buti" placeholder="请输入验证码"  id="pws" value="{{pwValue}}" />
     </mp-cell>
   </mp-cells>
   <view class="weui-btn-area">
-   <button class="weui-btn" type="primary" bindtap="cancel">返回</button>
-            <button class="weui-btn" type="primary" bindtap="subm">确定</button>
-        </view>
+    <button class="weui-btn" type="primary" bindtap="cancel">返回</button>
+    <button class="weui-btn" type="primary" bindtap="subm">确定</button>
+  </view>
+</view>
 </view>
