--- a/pages/Home/Home.wxss
+++ b/pages/Home/Home.wxss
@@ -425,7 +425,7 @@ page {
 
 
 /* 预警信息 */
-.echarts{
+/* .echarts{
   width:600rpx;
   height: 600rpx;
   display: flex;
@@ -435,25 +435,26 @@ page {
 ec-canvas {
   width: 100%;
   height: 100%;
+} */
+
+.safe{
+ margin: 0 auto;
+ width: 80%;
+ text-align: center;
+ letter-spacing: 10rpx;
+ font-size: 40rpx;
+ color: #27b698;
+ background-color: #fff;
+ border-radius: 30rpx;
+ margin-top: 20rpx;
+ height: 80rpx;
+ line-height: 80rpx;
 }
 
 
 
 
 
-/**app.wxss**/
-.container {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  box-sizing: border-box;
-} 
  
 
 
